--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
 @import-normalize;
 html {
-  height: 100vh;
+  height: 100%;
+  min-height: 100%;
 }
 body {
-  height: 100vh;
+  height: 100%;
+  min-height: 100%;
   box-sizing: border-box;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -16,4 +18,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root {
+  height: 100%;
+  min-height: 100%;
 }
